Updated sentences about myself.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     My favorite foods are cheesecake, caramel shortbread and caramel chocolate.<br/>
     My favorite animals are blue and gold macaws and cats.<br/>
     My favorite colours are turquoise, orange, gold, light blue, silver and magenta.<br/>
-    My favorite sports are running and football.<br/>
+    My favorite sports are running, football, swimming and kickboxing.  <br/>
+    My favorite hobbies are biking and gaming.<br/>
 </p>
 
 
