--- a/index.html
+++ b/index.html
@@ -3,17 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>About Me</title>
+    <link href="styles.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<p>
-    My name is Thomas.<br/>
-    My favorite foods are cheesecake, caramel shortbread and caramel chocolate.<br/>
-    My favorite animals are blue and gold macaws and cats.<br/>
-    My favorite colours are turquoise, orange, gold, light blue, silver and magenta.<br/>
-    My favorite sports are running, football, swimming and kickboxing.  <br/>
-    My favorite hobbies are biking and gaming.<br/>
-</p>
-
-
+<div class="row">
+    <div class="about-me">
+        <p>
+            My name is Thomas.<br/>
+            My favorite foods are cheesecake, caramel shortbread and caramel chocolate.<br/>
+            My favorite animals are blue and gold macaws and cats.<br/>
+            My favorite colours are turquoise, orange, gold, light blue, silver and magenta.<br/>
+            My favorite sports are running, football, swimming and kickboxing. <br/>
+            My favorite hobbies are biking and gaming.<br/>
+        </p>
+    </div>
+    <div class="about-rainforest">
+        <h1>Rainforests</h1>
+        <p>
+            Rainforests are endangered because we are cutting
+            it down for palm oil.Rainforest animals are now
+            endangered.So to stop rainforests and rainforest
+            animals being endangered we need to stop cutting down
+            rainforests.
+        </p>
+    </div>
+</div>
 </body>
 </html>
