--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>About Me</title>
     <link href="styles.css" rel="stylesheet" type="text/css"/>
 </head>
-<body>
+<body id="page_about_me">
 <div class="row">
     <div class="about-me">
         <p>
@@ -18,13 +18,9 @@
         </p>
     </div>
     <div class="about-rainforest">
-        <h1>Rainforests</h1>
+        <h1></h1>
         <p>
-            Rainforests are endangered because we are cutting
-            it down for palm oil.Rainforest animals are now
-            endangered.So to stop rainforests and rainforest
-            animals being endangered we need to stop cutting down
-            rainforests.
+            <a href="about-rainforests.html">About Rainforest.</a>
         </p>
     </div>
 </div>
